--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Title of Image 6</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Mothers In Poverty 6</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -365,9 +365,9 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/SJImage6.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.istockphoto.com%2Fillustrations%2Fhomeless-mother&psig=AOvVaw0MTm3a1AGcRuK5F-r8Agvw&ust=1670539125185000&source=images&cd=vfe&ved=0CAwQjRxqFwoTCMjQsrjJ6PsCFQAAAAAdAAAAABAh" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">This is where you will say something about the image. Try to have these six containers provide a mix of calls to action and literature to support your cause. For instance, if you can find a local organization to call/volunteer/donate/etc., you may want to put their information in one of these containers. Likewise, your image may be a phone. The title of this image may be their organization. In the space where this is all typed, you will talk about them. If they are an organization, you may include their mission statement or their spokesperson or representative image. If it is literature, be sure to include significant evidence here. You may want to pull a quote (if you do, include in-text citation) and you may want to pull a photo of scholar/speaker from the internet. Make sure it is covered under your license, especially if you have made your website public.</p>
+                                    <p class="mb-4">Thounds of mothers live under the poverty line. This greatly impacts the well being of the child that are bringing up in the world. This can cause mutiple different types of issues in the childs life if not addressed. There is one orgnaimztion I found that helps out mothers in poverty to prodive them with the funds they need to not only survive but help out there child s they are at a dissadravatge with the rest of there peers. The Organization is called, Helping Hands For Single Moms, They had to say this "Helping Hands for Single Moms’ mission is assisting low income single mom families as the mother attains a post-secondary, financial independence, and positive family legacy."</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
