--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="https://homelesslink-1b54.kxcdn.com/media/images/Diverse_group_1.height-340.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/hguuyg.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Thounds of mothers live under the poverty line. This greatly impacts the well being of the child that are bringing up in the world. This can cause mutiple different types of issues in the childs life if not addressed. There is one orgnaimztion I found that helps out mothers in poverty to prodive them with the funds they need to not only survive but help out there child s they are at a dissadravatge with the rest of there peers. The Organization is called, Helping Hands For Single Moms, They had to say this "Helping Hands for Single Moms’ mission is assisting low income single mom families as the mother attains a post-secondary, financial independence, and positive family legacy." For more infomation go to https://www.wealthysinglemommy.com/charities-that-help-single-mothers/.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
